<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"

    android:background="@drawable/ic_bottom">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/fp_animation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:layout_marginBottom="40dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/forgetpassword" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fp_txt1"
        android:text="@string/we_just_need_your_registered"
        android:layout_below="@id/fp_animation"
        android:textColor="@color/black"

        android:layout_centerHorizontal="true"
        android:textSize="17sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fp_txt2"
        android:text="@string/email_address_to_send_password"
        android:layout_below="@id/fp_txt1"
        android:textColor="@color/black"

        android:layout_centerHorizontal="true"
        android:textSize="17sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fp_txt3"
        android:text="@string/reset_link"
        android:layout_below="@id/fp_txt2"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"/>
    <!--    email-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/ll1"
        android:layout_margin="20dp"
        android:layout_below="@id/fp_txt3"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email_address"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/bg"
            app:boxStrokeColor="@color/bg"
            android:textColorHint="@color/bg"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fp_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginEnd="10dp"
                android:textColor="@color/bg"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fp_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:strokeColor="@color/bg"

        android:paddingHorizontal="40dp"
        android:text="@string/send_email"
        android:textColor="@color/white"
        app:cornerRadius="10dp" />
</RelativeLayout>