<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartScreen"
    android:orientation="vertical"
    android:background="@color/bg">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ss_animation"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40sp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/education" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ss_animation"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/let_s_get_into"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt1"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="left"
        android:text="@string/learning"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt2"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:paddingHorizontal="38dp"
            android:paddingVertical="15dp"
            android:text="@string/sign_in"
            android:textColor="@color/bg"
            app:strokeColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/bg"
            android:elevation="5dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:paddingHorizontal="38dp"
            android:paddingVertical="15dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:strokeColor="@color/white"
            app:strokeWidth="3dp" />


    </LinearLayout>

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/always_learn_new"
        android:textColor="@color/white"
        android:textSize="15sp"

        />
</RelativeLayout>
