<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bottom"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo_white" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textColor="@color/bg"
        android:textSize="30sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lg_email"
            app:boxStrokeColor="@color/bg"
            android:textColorHint="@color/bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lg_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/bg"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_filed"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:textColorHint="@color/bg"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="@color/bg"
            app:passwordToggleTint="@color/bg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lg_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/bg"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forget_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:text="@string/forget_password"
        app:strokeColor="@color/bg"
        app:strokeWidth="1dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sigin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/bg"
        android:elevation="5dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingHorizontal="38dp"
        android:paddingVertical="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:cornerRadius="10dp" />

</androidx.appcompat.widget.LinearLayoutCompat>