<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Edit_Profile">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ep_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_dp_cropped"
        app:shapeAppearance="@style/circle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ep_profile"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <!--user-name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ep_username_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:textColorHint="@color/bg"
                    app:boxStrokeColor="@color/bg"
                    app:counterTextColor="@color/bg"
                    app:hintTextColor="@color/bg"
                    app:startIconDrawable="@drawable/ic_username"
                    app:startIconTint="@color/bg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ep_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/bg" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <!--Full-name-->
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ep_fullname_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:textColorHint="@color/bg"
                    app:boxStrokeColor="@color/bg"
                    app:counterTextColor="@color/bg"
                    app:hintTextColor="@color/bg"
                    app:startIconDrawable="@drawable/ic_id_card"
                    app:startIconTint="@color/bg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ep_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/bg" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <!--email-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ep_email_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textColorHint="@color/bg"
                    app:boxStrokeColor="@color/bg"
                    app:counterTextColor="@color/bg"
                    app:hintTextColor="@color/bg"

                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/bg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ep_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"

                        android:textColor="@color/bg" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <!--gender-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_gender_2" />

                <RadioGroup
                    android:id="@+id/ep_rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/ep_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/bg"
                        android:checked="true"
                        android:padding="10dp"
                        android:text="@string/male"
                        android:textColor="@color/bg"
                        app:useMaterialThemeColors="true" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/ep_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/bg"
                        android:padding="10dp"
                        android:text="@string/female"
                        android:textColor="@color/bg" />
                </RadioGroup>
            </LinearLayout>
            <!--dob-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ep_dob_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Date of Birth"
                    android:textColorHint="@color/bg"
                    app:boxStrokeColor="@color/bg"
                    app:counterTextColor="@color/bg"
                    app:hintTextColor="@color/bg"

                    app:startIconDrawable="@drawable/ic_dob"
                    app:startIconTint="@color/bg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ep_dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:focusable="false"

                        android:textColor="@color/bg" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <!--contact-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ep_phn_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/bg"
                    app:boxStrokeColor="@color/bg"
                    app:counterTextColor="@color/bg"
                    app:hintTextColor="@color/bg"
                    app:startIconDrawable="@drawable/ic_contacts"
                    app:startIconTint="@color/bg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ep_phn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/bg" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <!--graduation-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ep_graduation_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/graduation"
                    android:textColorHint="@color/bg"
                    app:boxStrokeColor="@color/bg"
                    app:counterTextColor="@color/bg"
                    app:hintTextColor="@color/bg"
                    app:startIconDrawable="@drawable/ic_graduation"
                    app:startIconTint="@color/bg">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ep_gradu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:textColor="@color/bg" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mp_update_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/bg"
                android:elevation="5dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:paddingVertical="15dp"
                android:text="@string/update_profile"
                android:textColor="@color/white"
                app:cornerRadius="10dp" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/ep_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/ic_progress_bar"
        android:visibility="gone" />
</RelativeLayout>